blender 2.8 crash #56079

Closed
opened 2018-07-22 13:58:58 +02:00 by Arye Ramaty · 5 comments
Contributor

System Information
windows 10
GeForce GTX 1050

Blender Version

2.80-a1689fb091a-win64

Short description of error
blender crash while opened after configuring some default change.

Exact steps for others to reproduce the error

open the default blender, enter to one of the modes at the top side of the pie menu circle (sculpting, vertex paint, whight paint) and save as default startup.
exit blender.
try to reopen blender.
blender will crash before loading.
(you would have to change the startup configuration manually or remove it completely)

**System Information** windows 10 GeForce GTX 1050 **Blender Version** 2.80-a1689fb091a-win64 **Short description of error** blender crash while opened after configuring some default change. **Exact steps for others to reproduce the error** open the default blender, enter to one of the modes at the top side of the pie menu circle (sculpting, vertex paint, whight paint) and save as default startup. exit blender. try to reopen blender. blender will crash before loading. (you would have to change the startup configuration manually or remove it completely)
Author
Contributor

Added subscriber: @aryeramaty

Added subscriber: @aryeramaty

Added subscriber: @s12a

Added subscriber: @s12a

I can confirm this issue with Blender f07140940c on Windows 10 64-bit (1803) and AMD Radeon RX480 4GB with Radeon Software 18.7.1.

To restore Blender's normal working state, the program could be executed with the --factory-startup command line option.

This is the console output when the crash occurs:

D:\blender-git\blender>d:\blender-git\build_windows__x64_vc15_Release\bin\Release\blender.exe --debug
Switching to fully guarded memory allocator.
Blender 2.80 (sub 20)
Build: 2018-07-22 16:51 Windows
argv[0] = d:\blender-git\build_windows__x64_vc15_Release\bin\Release\blender.exe
argv[1] = --debug
read file C:\Users\user\AppData\Roaming\Blender Foundation\Blender\2.80\config\userpref.blend
  Version 280 sub 20 date 2018-07-18 17:30 hash c05a8460a64
Read prefs: C:\Users\user\AppData\Roaming\Blender Foundation\Blender\2.80\config\userpref.blend
read file C:\Users\user\AppData\Roaming\Blender Foundation\Blender\2.80\config\startup.blend
  Version 280 sub 20 date 2018-07-21 16:15 hash f07140940c4
Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7CAAC8150
Module  : d:\blender-git\build_windows__x64_vc15_Release\bin\Release\blender.exe

D:\blender-git\blender>
I can confirm this issue with Blender f07140940c4 on Windows 10 64-bit (1803) and AMD Radeon RX480 4GB with Radeon Software 18.7.1. To restore Blender's normal working state, the program could be executed with the `--factory-startup` command line option. This is the console output when the crash occurs: ``` D:\blender-git\blender>d:\blender-git\build_windows__x64_vc15_Release\bin\Release\blender.exe --debug Switching to fully guarded memory allocator. Blender 2.80 (sub 20) Build: 2018-07-22 16:51 Windows argv[0] = d:\blender-git\build_windows__x64_vc15_Release\bin\Release\blender.exe argv[1] = --debug read file C:\Users\user\AppData\Roaming\Blender Foundation\Blender\2.80\config\userpref.blend Version 280 sub 20 date 2018-07-18 17:30 hash c05a8460a64 Read prefs: C:\Users\user\AppData\Roaming\Blender Foundation\Blender\2.80\config\userpref.blend read file C:\Users\user\AppData\Roaming\Blender Foundation\Blender\2.80\config\startup.blend Version 280 sub 20 date 2018-07-21 16:15 hash f07140940c4 Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7CAAC8150 Module : d:\blender-git\build_windows__x64_vc15_Release\bin\Release\blender.exe D:\blender-git\blender> ```

This issue was referenced by 7f7e51161f

This issue was referenced by 7f7e51161f65c371d0f0c6c39bd32cbea45694cd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56079
No description provided.