Fix T56079: crash with startup.blend saved in sculpt/paint modes.

This reverts commit 81a93df6d22c2f148667b9a6e8308e083a4cec39, it is not safe
to handle initialization for startup.blend differently. Instead fix the root
issue of the preview icon data structures not being initialized in time.